--- a/mobile/ios/Runner/Info.plist
+++ b/mobile/ios/Runner/Info.plist
@@ -49,5 +49,11 @@
 		<true/>
 		<key>UIStatusBarHidden</key>
 		<false/>
+		<key>NSPhotoLibraryUsageDescription</key>
+		<string>Allow access to photos</string>
+		<key>NSCameraUsageDescription</key>
+		<string>Allow access to camera</string>
+		<key>NSMicrophoneUsageDescription</key>
+		<string>Allow access to microphone</string>
 	</dict>
 </plist>
