--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,7 @@
             "program": "mobile/lib/main.dart"
         },
         {
-            "name": "Start server",
+            "name": "Server",
             "type": "go",
             "request": "launch",
             "mode": "auto",
