--- a/mobile/pubspec.yaml
+++ b/mobile/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
     git:
       url: https://github.com/quabynah-bilson/shared_utils.git
       ref: main
+  tab_container: ^2.0.0
 
 
 dev_dependencies:
